--- a/html/kandev.html
+++ b/html/kandev.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="home.css">
-    <title>Home</title>
+    <link rel="stylesheet" href="../css/kandev.css">
+    <title>Kandev</title>
 </head>
 <body>
 
@@ -19,7 +19,7 @@
         </button>
 
         <div class="Perfil">
-            <img src="assets/icon_profile.png" alt="Ícone de Perfil">
+            <img src="../assets/icon_profile.png" alt="Ícone de Perfil">
         </div>
 
         </div>
@@ -37,13 +37,11 @@
             </div>
 
             <div class="coluna-vazia">
-                <img src="assets/img vazio.jpg" alt="Imagem de ícone vazio">
+                <img src="../assets/img vazio.jpg" alt="Imagem de ícone vazio">
                 <p>Nenhuma tarefa para começar</p>
             </div>
         </section>
 
-
-        <!-- Coluna 2 -->
         <section class="coluna" data-status="fazendo">
             <div class="coluna-header">
                 <span>Fazendo</span>
@@ -53,13 +51,11 @@
             <div class="cartoes-container"></div>
 
             <div class="coluna-vazia">
-                <img src="assets/img vazio.jpg" alt="Imagem de ícone vazio">
+                <img src="../assets/img vazio.jpg" alt="Imagem de ícone vazio">
                 <p>Nenhuma tarefa em andamento</p>
             </div>
         </section>
 
-
-        <!-- Coluna 3 -->
         <section class="coluna" data-status="concluído">
             <div class="coluna-header">
                 <span>Concluído</span>
@@ -69,12 +65,11 @@
             <div class="cartoes-container"></div>
 
             <div class="coluna-vazia">
-                <img src="assets/img vazio.jpg" alt="Imagem de ícone vazio">
+                <img src="../assets/img vazio.jpg" alt="Imagem de ícone vazio">
                 <p>Nenhuma tarefa concluída</p>
             </div>
         </section>
     </main>
-
 
     <footer>
         <p>&copy 2026 - <a href="https://github.com/clebermarcolino" target="_blank">Cleber</a> e <a href="https://github.com/carloshgalves" target="_blank">Carlos</a></p>
